--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "langchain>=0.3.23",
+    "langchain-google-genai>=2.1.3",
+    "langchain-openai>=0.3.14",
+    "tabulate>=0.9.0",
+]
