--- a/requirements.txt
+++ b/requirements.txt
@@ -178,6 +178,7 @@ starlette==0.46.1
 streamlit==1.44.1
 sympy==1.13.1
 syrupy==4.9.1
+tabulate==0.9.0
 tenacity==9.0.0
 tensorboard==2.19.0
 tensorboard-data-server==0.7.2
